@@ -334,6 +334,7 @@ Kirk Kelsey                         kirk.kelsey@0x4b.net
 Kristin E Thomas                    kristint@us.ibm.com
 Kjetil Torgrim Homme                kjetilho@ifi.uio.no
 Kristoffer Rose                     kris@diku.dk
+Ladislav Hagara                     ladislav.hagara@unob.cz
 Larry McVoy                         lm@sgi.com
 Lars Hecking                        lhecking@nmrc.ucc.ie
 Leah Q                              eequor@earthlink.net
