@@ -28,7 +28,6 @@ lib/verror.c
 lib/version-etc.c
 lib/xalloc-die.c
 lib/xfreopen.c
-lib/xfts.c
 lib/xmemcoll.c
 lib/xmemxfrm.c
 lib/xprintf.c
